openshift-resources/artifact-repo-deployment.yml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: artifact-repo
  namespace: demo-test
spec:
  replicas: 1
  selector:
    matchLabels:
      app: artifact-repo
  template:
    metadata:
      labels:
        app: artifact-repo
    spec:
      volumes:
        - name: bonjour-artifacts
          persistentVolumeClaim:
            claimName: bonjour-artifacts
      containers:
        - name: container
          image: 'image-registry.openshift-image-registry.svc:5000/openshift/httpd:latest'
          ports:
            - containerPort: 8080
              protocol: TCP
          resources: {}
          volumeMounts:
            - name: bonjour-artifacts
              mountPath: /var/www/html
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
          imagePullPolicy: Always
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
      dnsPolicy: ClusterFirst
      securityContext: {}
      schedulerName: default-scheduler
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 25%
      maxSurge: 25%
  revisionHistoryLimit: 10
  progressDeadlineSeconds: 600
