openshift-resources/artifact-repo-service.yml
apiVersion: v1
kind: Service
metadata:
  name: artifact-repo
  namespace: demo-test
spec:
  selector:
    app: artifact-repo
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
