openshift-resources/openshift-pipeline-triggers-route.yml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: event-listener-hello-github
  namespace: demo-test
  labels:
    app.kubernetes.io/managed-by: EventListener
    app.kubernetes.io/part-of: Triggers
    eventlistener: el-event-listener-hello-github
spec:
  path: /
  to:
    kind: Service
    name: el-event-listener-hello-github
  port:
    targetPort: 8080
